--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
-{
-  "type":"module",
+{ "bin": {
+  "brain-games": "bin/brain-games.js"
+  },
+  "type": "module",
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "my-first-project",
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/YauhenMakarevich-boop/bin/issues"
   },
-  "homepage": "https://github.com/YauhenMakarevich-boop/bin#readme"
+  "homepage": "https://github.com/YauhenMakarevich-boop/bin#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
+  
 }
