--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "bin": {
+  "brain-games": "bin/brain-games.js"
+  },
+  "type": "module",
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "my-first-project",
@@ -15,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/YauhenMakarevich-boop/bin/issues"
   },
-  "homepage": "https://github.com/YauhenMakarevich-boop/bin#readme"
+  "homepage": "https://github.com/YauhenMakarevich-boop/bin#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
